# sigil

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
apps/demo/: agent.ts  package.json  server.ts  setup.ts  tsconfig.json
apps/docs/: .gitignore  custom.css  docs.json  globals.css  introduction.mdx  mint.json  next.config.mjs  package.json  theme.config.jsx  theme.config.tsx  tsconfig.json
apps/docs/concepts/: registry.mdx  reputation.mdx  sigils.mdx
apps/docs/getting-started/: installation.mdx  quickstart.mdx
apps/docs/pages/: _app.js  _app.tsx  index.mdx
apps/docs/sdk/: client.mdx  credentials.mdx  registry.mdx
apps/docs/x402/: express.mdx  nextjs.mdx  overview.mdx
apps/web/: AGENTS.md  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/data/: mock.ts
apps/web/hooks/: useRegistry.ts  useSigils.ts
apps/web/providers/: PrincipalProvider.tsx  WalletProvider.tsx
apps/web/types/: index.ts
programs/credential/: Cargo.toml
programs/credential/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/credential/src/instructions/: issue_sigil.rs  record_spend.rs  revoke_sigil.rs  update_sigil.rs
programs/credential/tests/: test_credential.rs
programs/registry/: Cargo.toml
programs/registry/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/reputation/: Cargo.toml
programs/reputation/src/: lib.rs
tasks/: todo.md
(+43 files in other folders)
